# yurtur.top

./: .gitignore  Cargo.toml  Dioxus.toml  build.rs  flake.nix  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  rust-toolchain.toml  tailwind.config.js
app/: globals.css  layout.tsx  page.tsx
components/: BoostyProjects.tsx  BubbleTimeline.tsx  CustomTimelineCard.tsx  CustomTimelineDetails.tsx  DevHub.tsx  Education.tsx  EducationClientsTimeline.tsx  EducationClientsTimelineWrapper.tsx  ExpandableCard.tsx  Footer.tsx  GGx.tsx  Header.tsx  Intellias.tsx  Languages.tsx  NDC.tsx  RotatableIconCard.tsx  Tag.tsx  Technologies.tsx
components/features/Experience/: EducationClientsTimeline.tsx  EducationClientsTimelineWrapper.tsx  ExpandableExperienceCard.tsx
components/features/Experience/Custom/: BoostyProjects.tsx  DevHub.tsx  GGx.tsx  Intellias.tsx  NDC.tsx
docs/: 404.html  CNAME  __next.__PAGE__.txt  __next._full.txt  __next._tree.txt  education_client_data.json  education_client_data.json.br  index.html  tailwind.css  tailwind.css.br  technologies.json  timeline_data.json  timeline_data.json.br
docs/_next/static/chunks/: 0ca0f7e712bae0c4.js  2392ad64e0f9b447.js  287bab8d57f9efe3.js  860f428159aa01e0.js  8bd190f338446250.js  a27af1d1db40f5c0.css  cdaeaa77e058fb05.js  turbopack-f8225e857b1a3418.js
docs/_not-found/: __next._full.txt  __next._index.txt  __next._not-found.__PAGE__.txt  __next._not-found.txt  __next._tree.txt
docs/assets/dioxus/: yurtur-top.js  yurtur-top.js.br  yurtur-top_bg.wasm  yurtur-top_bg.wasm.br
docs/assets/dioxus/snippets/dioxus-interpreter-js-603636eeca72cf05/: inline0.js
docs/assets/dioxus/snippets/dioxus-interpreter-js-7e2aed97ebee2c55/: inline0.js  inline0.js.br
docs/assets/dioxus/snippets/dioxus-interpreter-js-85a0a2f8acce2e86/: inline0.js
docs/icons/: cplusplus.svg.br  criedCat.avif  rust.svg.br
docs/md/: ecole42.md  ecole42.md.br  epam.md  ggx.md  ggx.md.br  intellias.md  kpi.md  ndc.md  ndc.md.br  race-of-sloths.md  tricorn.md  ud.md
public/: education_client_data.json  education_client_data.json.br  tailwind.css  tailwind.css.br  technologies.json  technologies.json.br  timeline_data.json
public/icons/: blockchain.svg.br
public/md/: casper.md  devhub.md  devhub.md.br  ecole42.md  epam.md  epam.md.br  ggx.md  intellias.md  intellias.md.br  kpi.md  kpi.md.br  ndc.md  race-of-sloths.md  race-of-sloths.md.br  tricorn.md  tricorn.md.br  ud.md  ud.md.br
site/: Cargo.toml
src/: footer.rs  header.rs  main.rs
src/components/: expandable_card.rs  footer.rs  header.rs  mod.rs  particle_image.rs  particle_text.rs  popover.rs  rotatable_icon_card.rs  tag.rs
src/pages/: main.rs  mod.rs  valentine.rs
src/pages/main/: bubble_timeline.rs  education.rs  education_clients.rs  mod.rs  technologies.rs
