[package]
name = "yurtur-top"
authors = ["akorchyn <artur.yurii.korchynskyi@gmail.com>"]
version = "0.1.0"
repository = "https://github.com/akorchyn/yurtur-top"
edition = "2021"

[dependencies]
dioxus = "0.4"
dioxus-web = "0.4"
dioxus-free-icons = { version = "0.7", default-features = false, features = [
    "font-awesome-brands",
] }
dioxus_markdown = { git = "https://github.com/DioxusLabs/markdown.git", branch = "master", version = "0.2.0" }
chrono = "0.4"
reqwest = "0.11"
log = "0.4"
wasm-logger = "0.2.0"

# for canvas
web-sys = { version = "0.3", features = [
    'CanvasRenderingContext2d',
    'Document',
    'Element',
    'HtmlCanvasElement',
    'Window',
    'EventTarget',
    'ImageData',
    'ImageBitmap',
    'HtmlImageElement',
    'Touch',
    'TouchEvent',
    'TouchList',
    'console',
    'ScrollToOptions',
] }
wasm-bindgen = "0.2"
async-std = "1.12.0"
js-sys = "0.3"
image = "0.24"

# Data
serde = { version = "1.0", features = ["derive"], default-features = false }
serde_json = { verison = "1.0", features = ["alloc"], default-features = false }

[features]
default = []
