[package]
name = "yurtur-top"
authors = ["akorchyn <artur.yurii.korchynskyi@gmail.com>"]
version = "0.1.0"
repository = "https://github.com/akorchyn/yurtur-top"
edition = "2021"

[dependencies]
dioxus = { version = "0.5", features = ["web"] }
dioxus-free-icons = { version = "0.8", default-features = false, features = [
    "font-awesome-brands",
] }
dioxus-router = "0.5"
dioxus_markdown = { git = "https://github.com/DioxusLabs/markdown.git", rev = "05b19b687fc67e1bed1a737a7d36b64393c02b66" }
chrono = "0.4"
reqwest = "0.12"
log = "0.4"
wasm-logger = "0.2.0"

# for canvas
web-sys = { version = "0.3", features = [
    'CanvasRenderingContext2d',
    'Document',
    'Element',
    'HtmlCanvasElement',
    'Window',
    'EventTarget',
    'ImageData',
    'ImageBitmap',
    'HtmlImageElement',
    'Touch',
    'TouchEvent',
    'TouchList',
    'console',
    'ScrollToOptions',
] }
image = "0.25"

# Data
serde = { version = "1.0", features = ["derive"], default-features = false }
serde_json = { version = "1.0", features = ["alloc"], default-features = false }
manganis = "0.2.2"

[features]
default = []
